--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title> Lab Activity 7 </title>
-<link> rel="shortcut icon" href="CSLogo.png" type="image/x-icon">
+<link rel="shortcut icon" href="CSLogo.png" type="image/x-icon">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Noto+Sans+Display:ital,wght@0,100;0,200;0,300;0,400;1,200;1,300&family=Overpass:wght@100&family=Sora:wght@100&display=swap" rel="stylesheet">
